data/derived/fa15/progs/unify/prog3465.ml.out
Characters 403-416:
  | Power(a, b) -> if(x < 1.0 && x > -1.0 || y < 1.0 && y > -1.0) then 0.5 else eval(a, x, y) mod eval(b, x, y)
                                                                                ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
